# watch

./: CMakeLists.txt  partitions.csv  sdkconfig
main/: CMakeLists.txt  Gui.cpp  HardWare.cpp  LilyGoLib.cpp  MsgController.cpp  Wifi.cpp  audio.cpp  idf_component.yml  watch.cpp  welcome_ui.c
main/gui/: alert.cpp  bat_info.cpp  charge.cpp  charge.h  data_info.cpp  wifi_info.cpp
main/images/: code.c  danger.c  diswifi.c  esp_text.c  wifi.c
main/include/: Gui.h  HardWare.h  MsgController.h  Wifi.h  audio.h  utilities.h  welcome_ui.h
